syntax = "proto3";

package IT.WebServices.Fragments.Authorization.Payment.ParallelEconomy;

message ParallelEconomyPublicSettings {
  bool Enabled = 1;
  bool IsTest = 2;
}

message ParallelEconomyOwnerSettings {
  string UserID = 1;
  string UserApiKey = 2;
  string LocationID = 3;
  string ProductID = 4;
}
